Fixed IE alignment issues in servicesMini page for support panel and checked in IE-v11..

--- a/HexiCloud/public_html/css/hc-dashboard.css
+++ b/HexiCloud/public_html/css/hc-dashboard.css
@@ -127,7 +127,7 @@ and open the template in the editor.
 
 .usecase-detail-image {
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
